part2/2.01.ConnectingPods/log-output_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: k3d-myregistry.localhost:12345/log-output
          args: ["-reader", "-serverPort 8090", "-url http://pingpongsvc"]
