part2/2.01.ConnectingPods/log-output_service.yml
apiVersion: v1
kind: Service
metadata:
  name: log-output-service
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 8090
