part2/2.01.ConnectingPods/ping-pong_service.yml
apiVersion: v1
kind: Service
metadata:
  name: pingpongsvc
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
